--- a/_config.yml
+++ b/_config.yml
@@ -32,6 +32,7 @@ theme: minima
 plugins:
   - jekyll-feed
   - jekyll-seo-tag
+  - jekyll-sitemap
 
 disqusname: sfdxdeveloper
 google-site-verification: 2jeILXroDADGD8XLDeRDpTBh7alibO-n2EhYFSWAjS0
